--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+body {
+    background-color: #293354;
+    font-family: 'Merriweather', serif;
+}
+
+.head-name {
+    padding-top: 50px;
+}
+
 .App {
-  text-align: center;
+    text-align: center;
+    background-color: #ffffff;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 10px;
+    height: 60vh;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
+}
+
+.info {
+    background-color: #f4f9ff;
+    margin: 0 auto;
+    height: 35vh;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
+}
+
+#search-input {
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+    height: 20px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+#Searchbtn {
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+    border: none;
+    height: 22px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
